cmake_minimum_required(VERSION 3.5)
project(nuBasicInterpreter)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/.)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include/parser)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include/ast)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include/statements)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include/runtime)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include/types)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include/api)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include/util)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../)

file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/*.cc")
add_library(nuBasicInterpreter STATIC ${SOURCES})
target_compile_features(nuBasicInterpreter PRIVATE cxx_std_20)

# GDI console is always enabled on Windows full builds (not console-only)
if (WIN32 AND NOT _nubasic_console)
  target_link_libraries(nuBasicInterpreter PUBLIC nuWinConsole)
  target_include_directories(nuBasicInterpreter PUBLIC ${CMAKE_SOURCE_DIR}/console/win)
endif()
