lib_LIBRARIES = libmipjson.a

libmipjson_a_SOURCES = \
   mip_unicode.h \
   mip_json_obj.h \
   mip_exception.h \
   mip_json_parser.h \
   mip_json_obj.cc \
   mip_json_parser.cc 

AM_CXXFLAGS = $(INTI_CFLAGS) \
   -std=c++14 \
   -I$(top_srcdir)/mipjson/include \
   -I$(top_srcdir)/miptknzr/include

