lib_LIBRARIES = libmiptknzr.a

libmiptknzr_a_SOURCES = \
   mip_base_esc_cnvrtr.h \
   mip_base_tknzr_bldr.h \
   mip_base_tknzr.h \
   mip_esc_cnvrtr.cc \
   mip_esc_cnvrtr.h \
   mip_tknzr_bldr.cc \
   mip_tknzr_bldr.h \
   mip_tknzr.cc \
   mip_tknzr.h \
   mip_token.cc \
   mip_token.h

AM_CXXFLAGS = $(INTI_CFLAGS) \
   -std=c++11 \
   -I$(top_srcdir)/miptknzr/include

